# ocp-addons-operators-cli

./: Dockerfile  Makefile  README.md  pyproject.toml
app/: cli.py  constants.py  utils.py
app/addon_cmds/: commands.py
app/operator_cmds/: commands.py
cli/: cli.py
